<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settings_menu"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/menuItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameHeading"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nameTitle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editName"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/studentIdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/studentNumber"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/studentTitle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editStudentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/your_student_id"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/majorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/studentIdLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/studentMajor"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/major_title"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editStudentMajor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/major"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:id="@+id/emergencyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/majorLayout"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/emergency_contact_details"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/emergencyTitle"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:hint="@string/emergency_contact"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editContact"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:hint="@string/emergency_contact_number"
            android:inputType="phone" />
    </RelativeLayout>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/save_settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>