<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/settingsButton"
        app:layout_constraintRight_toLeftOf="@+id/emergencyButton"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
        Tried to make the GridLayout height dynamic and fill the available space,
        however this ended up only showing 2 of the 6 image buttons.
        Have hard coded the height as a result after attempting many fixes which
        were all unsuccessful
    -->

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="375dp"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:columnCount="2"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/notesImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            app:srcCompat="@drawable/notepad"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/tasksImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            app:srcCompat="@drawable/list"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/assignmentsImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            app:srcCompat="@drawable/project"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/classesImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            app:srcCompat="@drawable/blackboard"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/gradesImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            app:srcCompat="@drawable/grades"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/achievementsImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/trophy"
            tools:targetApi="lollipop" />
    </GridLayout>

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/emergencyButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/sos"
        android:focusable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sos" />

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hello"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</android.support.constraint.ConstraintLayout>